<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#EFCEF4"
                android:text="@string/tvTest"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPregunta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvPregunta1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/rbRespuesta1_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/rbRespuesta1_1" />

                <RadioButton
                    android:id="@+id/rbRespuesta1_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/rbRespuesta1_2" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvPregunta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvPregunta2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/rbRespuesta2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/rbRespuesta2_1" />

                <RadioButton
                    android:id="@+id/rbRespuesta2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/rbRespuesta2_2" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvPregunta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvPregunta3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbRespuesta3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cbRespuesta3_1" />

            <CheckBox
                android:id="@+id/cbRespuesta3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cbRespuesta3_2" />

            <CheckBox
                android:id="@+id/cbRespuesta3_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cbRespuesta3_3" />

            <TextView
                android:id="@+id/tvPregunta4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvPregunta4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbRespuesta4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cbRespuesta4_1" />

            <CheckBox
                android:id="@+id/cbRespuesta4_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cbRespuesta4_2" />

            <CheckBox
                android:id="@+id/cbRespuesta4_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cbRespuesta4_3" />

            <CheckBox
                android:id="@+id/cbRespuesta4_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/cbRespuesta4_4" />

            <TextView
                android:id="@+id/tvPregunta5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvPregunta5"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sRespuestas5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:entries="@array/respuestasPregunta5Array"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvPregunta6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvPregunta6"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sRespuestas6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:entries="@array/respuestasPregunta6Array"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/bPuntuación"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#3DC2FF"
                android:onClick="resolver"
                android:text="@string/bPuntuación" />

            <TextView
                android:id="@+id/tvPuntuación"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="#FFF59C"
                android:text="@string/tvPuntuación"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bVolverAcerca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#E91E63"
                android:onClick="volver"
                android:text="@string/bVolverTest" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fPublicidadTest"
                android:name="com.example.appmatematica.PublicidadFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                tools:layout="@layout/publicidad_fragment" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>