<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvCalculadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="#EFCEF4"
                android:text="@string/tvCalculadora"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tvInfoToggleButton"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/tbCalculadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="15dp"
                android:textOff="@string/tbCalculadora" />

            <TextView
                android:id="@+id/tvNúmeroParImpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvNúmero1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNúmero1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/etNúmero1"
                android:inputType="numberSigned"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvNúmeroAleatorio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tvNúmero2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNúmero2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/etNúmero2"
                android:inputType="numberSigned"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvOperación"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tvOperación"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bSumar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#3DC2FF"
                android:onClick="sumar"
                android:text="@string/bSumar"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/bRestar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#3DC2FF"
                android:onClick="restar"
                android:text="@string/bRestar"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/bMultiplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#3DC2FF"
                android:onClick="multiplicar"
                android:text="@string/bMultiplicar"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/bDividir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#3DC2FF"
                android:onClick="dividir"
                android:text="@string/bDividir"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvResultadoCalculadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="#FFF59C"
                android:text="@string/tvResultadoCalculadora"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bVolverAcerca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#E91E63"
                android:onClick="volver"
                android:text="@string/bVolver"
                tools:ignore="TextContrastCheck" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fPublicidadCalculadora"
                android:name="com.example.appmatematica.PublicidadFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                tools:layout="@layout/publicidad_fragment" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>